--- a/Anzeige.html
+++ b/Anzeige.html
@@ -25,7 +25,14 @@
         <!--<div ng-if="operations"> -->
         <!--    <pre ng-repeat="operation in operations">{{operation.zeile}} {{operation.befehl}}</pre> -->
 
+    <div>
+    <button type="button">Start</button>
+    <button type="button">Ein Schritt</button>
+    <button type="button">Stop</button>
+    <button type="button">Reset</button>
+    </div>
 
+</div>
 
     <div ng-if="content" ng-controller="ramcontroller">
 
@@ -59,13 +66,12 @@
             <tr><td>{{ram[40]}}</td> <td>{{ram[41]}}</td> <td>{{ram[42]}}</td> <td>{{ram[43]}}</td>	<td>{{ram[44]}}</td> <td>{{ram[45]}}</td> <td>{{ram[46]}}</td> <td>{{ram[47]}}</td></tr>
             <tr><td>{{ram[48]}}</td> <td>{{ram[49]}}</td> <td>{{ram[50]}}</td> <td>{{ram[51]}}</td>	<td>{{ram[52]}}</td> <td>{{ram[53]}}</td> <td>{{ram[54]}}</td> <td>{{ram[55]}}</td></tr>
             <tr><td>{{ram[56]}}</td> <td>{{ram[57]}}</td> <td>{{ram[58]}}</td> <td>{{ram[59]}}</td>	<td>{{ram[60]}}</td> <td>{{ram[61]}}</td> <td>{{ram[62]}}</td> <td>{{ram[63]}}</td></tr>
-            <tr><td>{{ram[64]}}</td> <td>{{ram[65]}}</td> <td>{{ram[66]}}</td> <td>{{ram[67]}}</td> <!--<td>XX</td>	         <td>XX</td>          <td>XX</td>       <td>XX</td>--></tr>
-
+            <tr><td>{{ram[64]}}</td> <td>{{ram[65]}}</td> <td>{{ram[66]}}</td> <td>{{ram[67]}}</td> </tr>
 
         </table>
 
 
     </div>
-        </div>
+    </div>
 </body>
 </html>
