-Befehlsdekoder funktioniert -Befehlsumsetzung: --> ADDLW funktioniert --> ADDWF funktioniert

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -123,7 +123,7 @@
         </div>
     </div>
     <div ng-controller="CPU">
-        <button ng-click="callOperation('7B7')">test</button>
+        <button ng-click="callOperation('3E6F')">test</button>
         <label>DigitalCarry:{{digitalCarry}}</label>
         <label>ZeroFlag:{{zeroFlag}}</label>
         <label>CarryFlag:{{carry}}</label>
