Überschrift in Anzeige hinzugefügt

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="PicSimu.css">
 </head>
 <body ng-controller="ramcontroller">
+<h1 align="center">PIC Simulator 16F84</h1>
     <div ng-controller="Befehlsspeichercontroller">
         <h1>
             Aufgabe 1 Texteinlesen
