--- a/Anzeige.html
+++ b/Anzeige.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html ng-app="pic">
+<html lang="de" ng-app="pic">
 <head>
     <meta charset="UTF-8">
     <title>PIC Simulator Anzeige</title>
-    <script type="text/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" src="maincontroller.js"></script>
+    <script type="text/javascript" src="sources/angular.min.js"></script>
+    <script type="text/javascript" src="scripts/maincontroller.js"></script>
     <link rel="stylesheet" href="PicSimu.css">
 </head>
 <body ng-controller="ramcontroller">
 <h1 align="center">PIC Simulator 16F84</h1>
     <div ng-controller="Befehlsspeichercontroller">
-        <h1>
-            Aufgabe 1 Texteinlesen
-        </h1>
+        <h2>
+            Programmcode
+        </h2>
         <br>
         <div class="codeanzeige">
         <input type="file" on-read-file="showContent($fileContent)" />
@@ -41,7 +41,7 @@
 
          <div ng-if="content" class="ram">
 
-            <h1> RAM anzeige</h1>
+            <h2>Speicherinhalt</h2>
 
             <table ng-if="ram" align="left" border="1">
 
