Testweise Änderung der Anzeige

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -31,8 +31,8 @@
         <button type="button">Stop</button>
         <button type="button" ng-click="myswitch=false">Reset</button>
         <select id="select" ng-disabled="myswitch">
-            <option selected="selected" value="2 MHz">2 MHz</option>
-            <option value="4 MHz">4 MHz</option>
+            <option selected="selected" value="2">2 MHz</option>
+            <option value="4">4 MHz</option>
         </select>
         <label>Laufzeitzähler</label><label>{{Laufzeit}}</label>
     </div>
