- Maincontroller zerlegt in mehrere Dateien

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>PIC Simulator Anzeige</title>
     <script type="text/javascript" src="sources/angular.min.js"></script>
-    <script type="text/javascript" src="scripts/maincontroller.js"></script>
+    <script type="text/javascript" src="scripts/Maincontroller.js"></script>
+    <script type="text/javascript" src="scripts/BefehlsspeicherCtrl.js"></script>
+    <script type="text/javascript" src="scripts/CpuCtrl.js"></script>
+    <script type="text/javascript" src="scripts/RamCtrl.js"></script>
     <link rel="stylesheet" href="PicSimu.css">
 </head>
 <body ng-controller="ramcontroller">
