--- a/Anzeige.html
+++ b/Anzeige.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="sources/bootstrap-3.3.6-dist/css/bootstrap.min.css">
 </head>
 <body ng-controller="ramcontroller">
-<h1 align="center">PIC Simulator 16F84</h1>
+
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -25,50 +25,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">PIC Simulator 16F84</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+            <ul class="nav navbar-nav"> <!--Linke Seite der Navbar-->
+               <li> <form class="navbar-form navbar-left" role="search">
+                    <button type="submit" class="btn btn-default">Start</button>
+                   <button type="submit" class="btn btn-default">Ein Schritt</button>
+                   <button type="submit" class="btn btn-default">Stop</button>
+                   <button type="submit" class="btn btn-default">Reset</button>
+                </form></li>
+
+
             </ul>
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </li>
+
+            <ul class="nav navbar-nav navbar-right"><!--Rechte Seite der Navbar-->
+                <li><a href="#">Hilfe</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-    <div ng-controller="Befehlsspeichercontroller">
+
+<div ng-controller="Befehlsspeichercontroller">
         <h2>
             Programmcode
         </h2>
