--- a/Anzeige.html
+++ b/Anzeige.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>PIC Simulator Anzeige</title>
     <script type="text/javascript" src="sources/angular.min.js"></script>
-    <script type="text/javascript" src="scripts/Maincontroller.js"></script>
+    <script type="text/javascript" src="sources/angularbootstrap/angular-animate.js"></script>
+    <script type="text/javascript" src="sources/angularbootstrap/angular-touch.js"></script>
+    <script type="text/javascript" src="sources/angularbootstrap/ui-bootstrap-tpls-1.3.2.min.js"></script>
+    <script type="text/javascript" src="scripts/maincontroller.js"></script>
     <script type="text/javascript" src="scripts/BefehlsspeicherCtrl.js"></script>
     <script type="text/javascript" src="scripts/CpuCtrl.js"></script>
     <script type="text/javascript" src="scripts/RamCtrl.js"></script>
