--- a/Anzeige.html
+++ b/Anzeige.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="scripts/CpuCtrl.js"></script>
     <script type="text/javascript" src="scripts/RamCtrl.js"></script>
     <script type="text/javascript" src="scripts/CounterCtrl.js"></script>
+    <script type="text/javascript" src="scripts/DarstellungCtrl.js"></script>
     <link rel="stylesheet" href="PicSimu.css">
     <link rel="stylesheet" href="sources/bootstrap-3.3.6-dist/css/bootstrap.min.css">
 </head>
@@ -58,9 +59,16 @@
         <br>
         <div class="codeanzeige">
         <input type="file" on-read-file="showContent($fileContent)" />
+
+            <div class="fileUpload btn btn-primary">
+                <span>Upload</span>
+                <input type="file" class="upload" />
+            </div>
+<!--TODO DOM änderungen anlegen Quelle: http://geniuscarrier.com/how-to-style-a-html-file-upload-button-in-pure-css/-->
+
         <div ng-if="content">
             <h2>File content is:</h2>
-               <pre ng-repeat="line in content">{{line}}</pre>
+               <pre class=".pre-scrollable"><p ng-repeat="line in content">{{line}}</p></pre>
         </div>
         </div>
 
@@ -68,15 +76,35 @@
         <!--    <pre ng-repeat="operation in operations">{{operation.zeile}} {{operation.befehl}}</pre> -->
 
     <div class="buttons">
-        <button type="button">Start</button>
-        <button type="button">Ein Schritt</button>
-        <button type="button">Stop</button>
-        <button type="button">Reset</button>
         <select name="taktauswahl" ng-controller="Counter" ng-model="Takt" onchange="Instructioncounter(Takt)">
             <option selected="selected" value="Takt=2">2 MHz</option>
             <option value="{{Takt=4}}">4 MHz</option>
         </select>
         <label>{{Takt}}</label>
+        <!--Test TODO Fertigbauen Quelle: https://angular-ui.github.io/bootstrap/-->
+
+        <div ng-controller="DropdownCtrl" ng-controller="Counter">
+            <!-- Single button -->
+            <div class="btn-group" uib-dropdown is-open="status.isopen">
+                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                    {{Takt}} Button dropdown <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <li role="menuitem" ><a href="#" ng-click="$.scope.Takt=2">2 MHz</a></li>
+                    <li role="menuitem"><a href="#">4 MHz</a></li>
+                    <li role="menuitem"><a href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <!--Ende Test-->
         <label>Laufzeitzähler</label><label>{{Laufzeit}}</label>
     </div>
 
@@ -86,7 +114,7 @@
 
             <h2>Speicherinhalt</h2>
 
-            <table ng-if="ram" align="left" border="1">
+            <table ng-if="ram" align="left" class="table table-striped">
 
                 <tr>
                     <td>Indirect_addr</td> <td>{{Indirect_addr}}</td>
@@ -135,7 +163,7 @@
 
             </table>
 
-            <table ng-if="ram" border="1">
+            <table ng-if="ram" class="table table-striped">
 
                 <tr>
                     <td>{{ram[0]}}</td>	 <td>{{ram[1]}}</td>  <td>{{ram[2]}}</td>  <td>{{ram[3]}}</td>  <td>{{ram[4]}}</td>	 <td>{{ram[5]}}</td>  <td>{{ram[6]}}</td>  <td>{{ram[7]}}</td>
