--- a/Anzeige.html
+++ b/Anzeige.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <title>PIC Simulator Anzeige</title>
     <script type="text/javascript" src="sources/angular.min.js"></script>
+
+    <script type="text/javascript" src="sources/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="sources/bootstrap-3.3.6-dist/js/bootstrap.js"></script>
+    <script type="text/javascript" src="sources/bootstrap-3.3.6-dist/js/bootstrap-select.min.js"></script>
+
     <script type="text/javascript" src="sources/angularbootstrap/angular-animate.js"></script>
     <script type="text/javascript" src="sources/angularbootstrap/angular-touch.js"></script>
     <script type="text/javascript" src="sources/angularbootstrap/ui-bootstrap-tpls-1.3.2.min.js"></script>
+
     <script type="text/javascript" src="scripts/maincontroller.js"></script>
     <script type="text/javascript" src="scripts/BefehlsspeicherCtrl.js"></script>
     <script type="text/javascript" src="scripts/CpuCtrl.js"></script>
     <script type="text/javascript" src="scripts/RamCtrl.js"></script>
     <script type="text/javascript" src="scripts/CounterCtrl.js"></script>
     <script type="text/javascript" src="scripts/DarstellungCtrl.js"></script>
+
     <link rel="stylesheet" href="PicSimu.css">
+    <link rel="stylesheet" href="sources/bootstrap-3.3.6-dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="sources/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+
 </head>
 <body ng-controller="ramcontroller">
 
@@ -76,15 +85,14 @@
         <!--    <pre ng-repeat="operation in operations">{{operation.zeile}} {{operation.befehl}}</pre> -->
 
     <div class="buttons">
-        <select name="taktauswahl" ng-controller="Counter" ng-model="Takt" onchange="Instructioncounter(Takt)">
-            <option selected="selected" value="Takt=2">2 MHz</option>
-            <option value="{{Takt=4}}">4 MHz</option>
+        <select id="Taktauswahl" class="selectpicker" ng-controller="DropdownCtrl" >
+            <option value="2" selected="selected">2 MHz</option>
+            <option value="4">4 MHz</option>
         </select>
         <label>{{Takt}}</label>
-        <!--Test TODO Fertigbauen Quelle: https://angular-ui.github.io/bootstrap/-->
+        <!--Test TODO Fertigbauen Quelle: https://angular-ui.github.io/bootstrap/
 
-        <div ng-controller="DropdownCtrl" ng-controller="Counter">
-            <!-- Single button -->
+
             <div class="btn-group" uib-dropdown is-open="status.isopen">
                 <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
                     {{Takt}} Button dropdown <span class="caret"></span>
@@ -104,7 +112,7 @@
 
 
 
-        <!--Ende Test-->
+        -->
         <label>Laufzeitzähler</label><label>{{Laufzeit}}</label>
     </div>
 
