--- a/Anzeige.html
+++ b/Anzeige.html
@@ -49,9 +49,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!--Linke Seite der Navbar-->
             <ul class="nav navbar-nav">
-               <li>
+               <li ng-controller="CPU">
                    <form class="navbar-form navbar-left" role="search" >
-                       <button type="submit" class="btn btn-default">Start</button>
+                       <button type="submit" class="btn btn-default" ng-click="callOperation('3E6F')">Start</button>
                        <button type="submit" class="btn btn-default">Ein Schritt</button>
                        <button type="submit" class="btn btn-default">Stop</button>
                        <button type="submit" class="btn btn-default">Reset</button>
